{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 1811,
  "lineage": "a6f0b357-cb87-7c75-4f23-c0d0160f4469",
  "resources": [
    {
      "module": "module.eks_primary.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:643942183295:security-group/sg-0d6c6b37ee711ca64",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0d6c6b37ee711ca64",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fb1c5aac3a0c947d"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "aerolink-dev-primary-cluster-cluster-2026060210050360620000000f",
            "name_prefix": "aerolink-dev-primary-cluster-cluster-",
            "owner_id": "643942183295",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aerolink-dev-primary-cluster-cluster"
            },
            "tags_all": {
              "Name": "aerolink-dev-primary-cluster-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-025c48b3d39de9e1d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_primary.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:643942183295:security-group/sg-0fb1c5aac3a0c947d",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fb1c5aac3a0c947d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0a9dd9ff5c748751d"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow API server to reach Istio webhook",
                "from_port": 15017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d6c6b37ee711ca64"
                ],
                "self": false,
                "to_port": 15017
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d6c6b37ee711ca64"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d6c6b37ee711ca64"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d6c6b37ee711ca64"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d6c6b37ee711ca64"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d6c6b37ee711ca64"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d6c6b37ee711ca64"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "aerolink-dev-primary-cluster-node-20260602100503816000000011",
            "name_prefix": "aerolink-dev-primary-cluster-node-",
            "owner_id": "643942183295",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aerolink-dev-primary-cluster-node",
              "kubernetes.io/cluster/aerolink-dev-primary-cluster": "owned"
            },
            "tags_all": {
              "Name": "aerolink-dev-primary-cluster-node",
              "kubernetes.io/cluster/aerolink-dev-primary-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-025c48b3d39de9e1d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_primary.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1425474129",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d6c6b37ee711ca64",
            "security_group_rule_id": "sgr-0772d0acedbf7f300",
            "self": false,
            "source_security_group_id": "sg-0fb1c5aac3a0c947d",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_primary.module.eks.aws_security_group.cluster",
            "module.eks_primary.module.eks.aws_security_group.node",
            "module.vpc_primary.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_primary.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-2336198322",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0fb1c5aac3a0c947d",
            "security_group_rule_id": "sgr-0b78f193f3b5b008d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_primary.module.eks.aws_security_group.cluster",
            "module.eks_primary.module.eks.aws_security_group.node",
            "module.vpc_primary.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1883815211",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fb1c5aac3a0c947d",
            "security_group_rule_id": "sgr-0efba56a87316b0ec",
            "self": false,
            "source_security_group_id": "sg-0d6c6b37ee711ca64",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_primary.module.eks.aws_security_group.cluster",
            "module.eks_primary.module.eks.aws_security_group.node",
            "module.vpc_primary.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1327485405",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fb1c5aac3a0c947d",
            "security_group_rule_id": "sgr-0abb572c4a4ef213a",
            "self": false,
            "source_security_group_id": "sg-0d6c6b37ee711ca64",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_primary.module.eks.aws_security_group.cluster",
            "module.eks_primary.module.eks.aws_security_group.node",
            "module.vpc_primary.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-2254288459",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fb1c5aac3a0c947d",
            "security_group_rule_id": "sgr-0469abd11f646c39e",
            "self": false,
            "source_security_group_id": "sg-0d6c6b37ee711ca64",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_primary.module.eks.aws_security_group.cluster",
            "module.eks_primary.module.eks.aws_security_group.node",
            "module.vpc_primary.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-2499906154",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fb1c5aac3a0c947d",
            "security_group_rule_id": "sgr-0fb08be47767c77f0",
            "self": false,
            "source_security_group_id": "sg-0d6c6b37ee711ca64",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_primary.module.eks.aws_security_group.cluster",
            "module.eks_primary.module.eks.aws_security_group.node",
            "module.vpc_primary.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-4053842337",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fb1c5aac3a0c947d",
            "security_group_rule_id": "sgr-09c9e1c8e49a7a60a",
            "self": false,
            "source_security_group_id": "sg-0d6c6b37ee711ca64",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_primary.module.eks.aws_security_group.cluster",
            "module.eks_primary.module.eks.aws_security_group.node",
            "module.vpc_primary.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-4070265420",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fb1c5aac3a0c947d",
            "security_group_rule_id": "sgr-03876b5e3783484e4",
            "self": false,
            "source_security_group_id": "sg-0d6c6b37ee711ca64",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_primary.module.eks.aws_security_group.cluster",
            "module.eks_primary.module.eks.aws_security_group.node",
            "module.vpc_primary.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_istio_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow API server to reach Istio webhook",
            "from_port": 15017,
            "id": "sgrule-2914600333",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fb1c5aac3a0c947d",
            "security_group_rule_id": "sgr-06550c3357fa78424",
            "self": false,
            "source_security_group_id": "sg-0d6c6b37ee711ca64",
            "timeouts": null,
            "to_port": 15017,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_primary.module.eks.aws_security_group.cluster",
            "module.eks_primary.module.eks.aws_security_group.node",
            "module.vpc_primary.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-2200814255",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fb1c5aac3a0c947d",
            "security_group_rule_id": "sgr-0b191841aabfa69cc",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_primary.module.eks.aws_security_group.cluster",
            "module.eks_primary.module.eks.aws_security_group.node",
            "module.vpc_primary.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2714588310",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fb1c5aac3a0c947d",
            "security_group_rule_id": "sgr-065179f878f0cf9b4",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_primary.module.eks.aws_security_group.cluster",
            "module.eks_primary.module.eks.aws_security_group.node",
            "module.vpc_primary.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-93517689",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0fb1c5aac3a0c947d",
            "security_group_rule_id": "sgr-05fba8db2a5b50b3f",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_primary.module.eks.aws_security_group.cluster",
            "module.eks_primary.module.eks.aws_security_group.node",
            "module.vpc_primary.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_secondary.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:643942183295:security-group/sg-0a62395c7425ec055",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0a62395c7425ec055",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-085f46ed53a51adb2"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "aerolink-dev-secondary-cluster-cluster-2026060210045034650000000c",
            "name_prefix": "aerolink-dev-secondary-cluster-cluster-",
            "owner_id": "643942183295",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aerolink-dev-secondary-cluster-cluster"
            },
            "tags_all": {
              "Name": "aerolink-dev-secondary-cluster-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a99a34f319aaa368"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_secondary.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_secondary.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:643942183295:security-group/sg-085f46ed53a51adb2",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-085f46ed53a51adb2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-02402c0650e9e0445"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow API server to reach Istio webhook",
                "from_port": 15017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a62395c7425ec055"
                ],
                "self": false,
                "to_port": 15017
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a62395c7425ec055"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a62395c7425ec055"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a62395c7425ec055"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a62395c7425ec055"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a62395c7425ec055"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a62395c7425ec055"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "aerolink-dev-secondary-cluster-node-2026060210045027100000000b",
            "name_prefix": "aerolink-dev-secondary-cluster-node-",
            "owner_id": "643942183295",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aerolink-dev-secondary-cluster-node",
              "kubernetes.io/cluster/aerolink-dev-secondary-cluster": "owned"
            },
            "tags_all": {
              "Name": "aerolink-dev-secondary-cluster-node",
              "kubernetes.io/cluster/aerolink-dev-secondary-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a99a34f319aaa368"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_secondary.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_secondary.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2945927824",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a62395c7425ec055",
            "security_group_rule_id": "sgr-0fd132250b37a6e58",
            "self": false,
            "source_security_group_id": "sg-085f46ed53a51adb2",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_secondary.module.eks.aws_security_group.cluster",
            "module.eks_secondary.module.eks.aws_security_group.node",
            "module.vpc_secondary.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_secondary.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-719809927",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-085f46ed53a51adb2",
            "security_group_rule_id": "sgr-0059522981917bd76",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_secondary.module.eks.aws_security_group.cluster",
            "module.eks_secondary.module.eks.aws_security_group.node",
            "module.vpc_secondary.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1206825686",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-085f46ed53a51adb2",
            "security_group_rule_id": "sgr-0614301a7fbf0c8db",
            "self": false,
            "source_security_group_id": "sg-0a62395c7425ec055",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_secondary.module.eks.aws_security_group.cluster",
            "module.eks_secondary.module.eks.aws_security_group.node",
            "module.vpc_secondary.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3435750620",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-085f46ed53a51adb2",
            "security_group_rule_id": "sgr-0000c5872b4c66120",
            "self": false,
            "source_security_group_id": "sg-0a62395c7425ec055",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_secondary.module.eks.aws_security_group.cluster",
            "module.eks_secondary.module.eks.aws_security_group.node",
            "module.vpc_secondary.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-92996426",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-085f46ed53a51adb2",
            "security_group_rule_id": "sgr-00801c707a83fcd9e",
            "self": false,
            "source_security_group_id": "sg-0a62395c7425ec055",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_secondary.module.eks.aws_security_group.cluster",
            "module.eks_secondary.module.eks.aws_security_group.node",
            "module.vpc_secondary.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-383205227",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-085f46ed53a51adb2",
            "security_group_rule_id": "sgr-090f2b5364dd72ebe",
            "self": false,
            "source_security_group_id": "sg-0a62395c7425ec055",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_secondary.module.eks.aws_security_group.cluster",
            "module.eks_secondary.module.eks.aws_security_group.node",
            "module.vpc_secondary.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-1920339104",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-085f46ed53a51adb2",
            "security_group_rule_id": "sgr-091fc24d94c56173c",
            "self": false,
            "source_security_group_id": "sg-0a62395c7425ec055",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_secondary.module.eks.aws_security_group.cluster",
            "module.eks_secondary.module.eks.aws_security_group.node",
            "module.vpc_secondary.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3807422238",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-085f46ed53a51adb2",
            "security_group_rule_id": "sgr-03d9c90bccbf85638",
            "self": false,
            "source_security_group_id": "sg-0a62395c7425ec055",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_secondary.module.eks.aws_security_group.cluster",
            "module.eks_secondary.module.eks.aws_security_group.node",
            "module.vpc_secondary.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_istio_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow API server to reach Istio webhook",
            "from_port": 15017,
            "id": "sgrule-3184701663",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-085f46ed53a51adb2",
            "security_group_rule_id": "sgr-0ad37cf958dbe839d",
            "self": false,
            "source_security_group_id": "sg-0a62395c7425ec055",
            "timeouts": null,
            "to_port": 15017,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_secondary.module.eks.aws_security_group.cluster",
            "module.eks_secondary.module.eks.aws_security_group.node",
            "module.vpc_secondary.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-3825738906",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-085f46ed53a51adb2",
            "security_group_rule_id": "sgr-06bf1ff8f749557f8",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_secondary.module.eks.aws_security_group.cluster",
            "module.eks_secondary.module.eks.aws_security_group.node",
            "module.vpc_secondary.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3747854799",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-085f46ed53a51adb2",
            "security_group_rule_id": "sgr-05de3a148a050fe1e",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_secondary.module.eks.aws_security_group.cluster",
            "module.eks_secondary.module.eks.aws_security_group.node",
            "module.vpc_secondary.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-2067536416",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-085f46ed53a51adb2",
            "security_group_rule_id": "sgr-0233bfe45006c9890",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_secondary.module.eks.aws_security_group.cluster",
            "module.eks_secondary.module.eks.aws_security_group.node",
            "module.vpc_secondary.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.elasticache_redis",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:643942183295:security-group/sg-0c4b704c10f418dec",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c4b704c10f418dec",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "aerolink-redis-sg20260602100507167000000013",
            "name_prefix": "aerolink-redis-sg",
            "owner_id": "643942183295",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-025c48b3d39de9e1d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.data.aws_availability_zones.available",
            "module.vpc_primary.module.vpc.aws_subnet.private",
            "module.vpc_primary.module.vpc.aws_vpc.this",
            "module.vpc_primary.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.rds_aurora.module.aurora_primary",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:643942183295:security-group/sg-0cc9c7c91f813b225",
            "description": "Control traffic to/from RDS Aurora aerolink-aurora-primary",
            "egress": [],
            "id": "sg-0cc9c7c91f813b225",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "aerolink-aurora-primary-20260602100503810600000010",
            "name_prefix": "aerolink-aurora-primary-",
            "owner_id": "643942183295",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aerolink-aurora-primary"
            },
            "tags_all": {
              "Name": "aerolink-aurora-primary"
            },
            "timeouts": null,
            "vpc_id": "vpc-025c48b3d39de9e1d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.rds_aurora.module.aurora_primary",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": "vpc_ingress",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.1.0/24",
              "10.0.2.0/24"
            ],
            "description": null,
            "from_port": 5432,
            "id": "sgrule-3631476914",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0cc9c7c91f813b225",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.rds_aurora.module.aurora_primary.aws_security_group.this",
            "module.vpc_primary.data.aws_availability_zones.available",
            "module.vpc_primary.module.vpc.aws_subnet.private",
            "module.vpc_primary.module.vpc.aws_vpc.this",
            "module.vpc_primary.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.rds_aurora.module.aurora_secondary",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:643942183295:security-group/sg-0ad13ffd574ef7603",
            "description": "Control traffic to/from RDS Aurora aerolink-aurora-secondary",
            "egress": [],
            "id": "sg-0ad13ffd574ef7603",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "aerolink-aurora-secondary-20260602101258668400000010",
            "name_prefix": "aerolink-aurora-secondary-",
            "owner_id": "643942183295",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aerolink-aurora-secondary"
            },
            "tags_all": {
              "Name": "aerolink-aurora-secondary"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a99a34f319aaa368"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.rds_aurora.aws_rds_global_cluster.aerolink_global",
            "module.rds_aurora.module.aurora_primary.aws_appautoscaling_policy.this",
            "module.rds_aurora.module.aurora_primary.aws_appautoscaling_target.this",
            "module.rds_aurora.module.aurora_primary.aws_cloudwatch_log_group.this",
            "module.rds_aurora.module.aurora_primary.aws_db_parameter_group.this",
            "module.rds_aurora.module.aurora_primary.aws_db_subnet_group.this",
            "module.rds_aurora.module.aurora_primary.aws_iam_role.rds_enhanced_monitoring",
            "module.rds_aurora.module.aurora_primary.aws_iam_role_policy_attachment.rds_enhanced_monitoring",
            "module.rds_aurora.module.aurora_primary.aws_rds_cluster.this",
            "module.rds_aurora.module.aurora_primary.aws_rds_cluster_activity_stream.this",
            "module.rds_aurora.module.aurora_primary.aws_rds_cluster_endpoint.this",
            "module.rds_aurora.module.aurora_primary.aws_rds_cluster_instance.this",
            "module.rds_aurora.module.aurora_primary.aws_rds_cluster_parameter_group.this",
            "module.rds_aurora.module.aurora_primary.aws_rds_cluster_role_association.this",
            "module.rds_aurora.module.aurora_primary.aws_rds_shard_group.this",
            "module.rds_aurora.module.aurora_primary.aws_secretsmanager_secret_rotation.this",
            "module.rds_aurora.module.aurora_primary.aws_security_group.this",
            "module.rds_aurora.module.aurora_primary.aws_security_group_rule.this",
            "module.rds_aurora.module.aurora_primary.data.aws_iam_policy_document.monitoring_rds_assume_role",
            "module.rds_aurora.module.aurora_primary.data.aws_partition.current",
            "module.rds_aurora.random_password.master",
            "module.vpc_primary.data.aws_availability_zones.available",
            "module.vpc_primary.module.vpc.aws_db_subnet_group.database",
            "module.vpc_primary.module.vpc.aws_subnet.database",
            "module.vpc_primary.module.vpc.aws_subnet.private",
            "module.vpc_primary.module.vpc.aws_vpc.this",
            "module.vpc_primary.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_secondary.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.rds_aurora.module.aurora_secondary",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": "vpc_ingress",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.1.0/24",
              "10.0.2.0/24"
            ],
            "description": null,
            "from_port": 5432,
            "id": "sgrule-1846805176",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ad13ffd574ef7603",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.rds_aurora.aws_rds_global_cluster.aerolink_global",
            "module.rds_aurora.module.aurora_primary.aws_appautoscaling_policy.this",
            "module.rds_aurora.module.aurora_primary.aws_appautoscaling_target.this",
            "module.rds_aurora.module.aurora_primary.aws_cloudwatch_log_group.this",
            "module.rds_aurora.module.aurora_primary.aws_db_parameter_group.this",
            "module.rds_aurora.module.aurora_primary.aws_db_subnet_group.this",
            "module.rds_aurora.module.aurora_primary.aws_iam_role.rds_enhanced_monitoring",
            "module.rds_aurora.module.aurora_primary.aws_iam_role_policy_attachment.rds_enhanced_monitoring",
            "module.rds_aurora.module.aurora_primary.aws_rds_cluster.this",
            "module.rds_aurora.module.aurora_primary.aws_rds_cluster_activity_stream.this",
            "module.rds_aurora.module.aurora_primary.aws_rds_cluster_endpoint.this",
            "module.rds_aurora.module.aurora_primary.aws_rds_cluster_instance.this",
            "module.rds_aurora.module.aurora_primary.aws_rds_cluster_parameter_group.this",
            "module.rds_aurora.module.aurora_primary.aws_rds_cluster_role_association.this",
            "module.rds_aurora.module.aurora_primary.aws_rds_shard_group.this",
            "module.rds_aurora.module.aurora_primary.aws_secretsmanager_secret_rotation.this",
            "module.rds_aurora.module.aurora_primary.aws_security_group.this",
            "module.rds_aurora.module.aurora_primary.aws_security_group_rule.this",
            "module.rds_aurora.module.aurora_primary.data.aws_iam_policy_document.monitoring_rds_assume_role",
            "module.rds_aurora.module.aurora_primary.data.aws_partition.current",
            "module.rds_aurora.module.aurora_secondary.aws_security_group.this",
            "module.rds_aurora.random_password.master",
            "module.vpc_primary.data.aws_availability_zones.available",
            "module.vpc_primary.module.vpc.aws_db_subnet_group.database",
            "module.vpc_primary.module.vpc.aws_subnet.database",
            "module.vpc_primary.module.vpc.aws_subnet.private",
            "module.vpc_primary.module.vpc.aws_vpc.this",
            "module.vpc_primary.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_secondary.data.aws_availability_zones.available",
            "module.vpc_secondary.module.vpc.aws_subnet.private",
            "module.vpc_secondary.module.vpc.aws_vpc.this",
            "module.vpc_secondary.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:643942183295:network-acl/acl-041e60c7db9cf2c07",
            "default_network_acl_id": "acl-041e60c7db9cf2c07",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-041e60c7db9cf2c07",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "643942183295",
            "subnet_ids": [
              "subnet-00184a905d02447f9",
              "subnet-00f2acb723ea3ed5f",
              "subnet-05f51fc5705940abe",
              "subnet-063df7862e35b97c0",
              "subnet-073b613c1e994a689",
              "subnet-0a10d6ac3077ddb1d"
            ],
            "tags": {
              "Name": "aerolink-dev-primary-vpc-default"
            },
            "tags_all": {
              "Name": "aerolink-dev-primary-vpc-default"
            },
            "vpc_id": "vpc-025c48b3d39de9e1d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:643942183295:route-table/rtb-02f44428899258466",
            "default_route_table_id": "rtb-02f44428899258466",
            "id": "rtb-02f44428899258466",
            "owner_id": "643942183295",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "aerolink-dev-primary-vpc-default"
            },
            "tags_all": {
              "Name": "aerolink-dev-primary-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-025c48b3d39de9e1d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:643942183295:security-group/sg-067c770109acdbb6b",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-067c770109acdbb6b",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "643942183295",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aerolink-dev-primary-vpc-default"
            },
            "tags_all": {
              "Name": "aerolink-dev-primary-vpc-default"
            },
            "vpc_id": "vpc-025c48b3d39de9e1d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0986f89a0b54f6135",
            "arn": "arn:aws:ec2:us-east-1:643942183295:elastic-ip/eipalloc-0986f89a0b54f6135",
            "association_id": "eipassoc-0090b4de4946ecdd3",
            "domain": "vpc",
            "id": "eipalloc-0986f89a0b54f6135",
            "network_border_group": "us-east-1",
            "network_interface": "eni-08e54d36c4e1ac148",
            "private_dns": "ip-10-0-101-74.ec2.internal",
            "private_ip": "10.0.101.74",
            "public_dns": "ec2-54-165-45-168.compute-1.amazonaws.com",
            "public_ip": "54.165.45.168",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "aerolink-dev-primary-vpc-us-east-1a"
            },
            "tags_all": {
              "Name": "aerolink-dev-primary-vpc-us-east-1a"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.data.aws_availability_zones.available",
            "module.vpc_primary.module.vpc.aws_internet_gateway.this",
            "module.vpc_primary.module.vpc.aws_vpc.this",
            "module.vpc_primary.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:643942183295:internet-gateway/igw-0d06c0c822869ce11",
            "id": "igw-0d06c0c822869ce11",
            "owner_id": "643942183295",
            "tags": {
              "Name": "aerolink-dev-primary-vpc"
            },
            "tags_all": {
              "Name": "aerolink-dev-primary-vpc"
            },
            "vpc_id": "vpc-025c48b3d39de9e1d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.module.vpc.aws_vpc.this",
            "module.vpc_primary.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0986f89a0b54f6135",
            "association_id": "eipassoc-0090b4de4946ecdd3",
            "connectivity_type": "public",
            "id": "nat-0056c50275cda52eb",
            "network_interface_id": "eni-08e54d36c4e1ac148",
            "private_ip": "10.0.101.74",
            "public_ip": "54.165.45.168",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05f51fc5705940abe",
            "tags": {
              "Name": "aerolink-dev-primary-vpc-us-east-1a"
            },
            "tags_all": {
              "Name": "aerolink-dev-primary-vpc-us-east-1a"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.data.aws_availability_zones.available",
            "module.vpc_primary.module.vpc.aws_eip.nat",
            "module.vpc_primary.module.vpc.aws_internet_gateway.this",
            "module.vpc_primary.module.vpc.aws_subnet.public",
            "module.vpc_primary.module.vpc.aws_vpc.this",
            "module.vpc_primary.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00592b353b1ebbc591080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0056c50275cda52eb",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00592b353b1ebbc59",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.data.aws_availability_zones.available",
            "module.vpc_primary.module.vpc.aws_eip.nat",
            "module.vpc_primary.module.vpc.aws_internet_gateway.this",
            "module.vpc_primary.module.vpc.aws_nat_gateway.this",
            "module.vpc_primary.module.vpc.aws_route_table.private",
            "module.vpc_primary.module.vpc.aws_subnet.public",
            "module.vpc_primary.module.vpc.aws_vpc.this",
            "module.vpc_primary.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d06c0c822869ce11",
            "id": "r-rtb-06e483ff9e005cabd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06e483ff9e005cabd",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.data.aws_availability_zones.available",
            "module.vpc_primary.module.vpc.aws_internet_gateway.this",
            "module.vpc_primary.module.vpc.aws_route_table.public",
            "module.vpc_primary.module.vpc.aws_vpc.this",
            "module.vpc_primary.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:643942183295:route-table/rtb-00592b353b1ebbc59",
            "id": "rtb-00592b353b1ebbc59",
            "owner_id": "643942183295",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0056c50275cda52eb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aerolink-dev-primary-vpc-private"
            },
            "tags_all": {
              "Name": "aerolink-dev-primary-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-025c48b3d39de9e1d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.data.aws_availability_zones.available",
            "module.vpc_primary.module.vpc.aws_vpc.this",
            "module.vpc_primary.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:643942183295:route-table/rtb-06e483ff9e005cabd",
            "id": "rtb-06e483ff9e005cabd",
            "owner_id": "643942183295",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d06c0c822869ce11",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aerolink-dev-primary-vpc-public"
            },
            "tags_all": {
              "Name": "aerolink-dev-primary-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-025c48b3d39de9e1d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.data.aws_availability_zones.available",
            "module.vpc_primary.module.vpc.aws_vpc.this",
            "module.vpc_primary.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a236c2559d11517",
            "route_table_id": "rtb-00592b353b1ebbc59",
            "subnet_id": "subnet-00184a905d02447f9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.data.aws_availability_zones.available",
            "module.vpc_primary.module.vpc.aws_route_table.database",
            "module.vpc_primary.module.vpc.aws_route_table.private",
            "module.vpc_primary.module.vpc.aws_subnet.database",
            "module.vpc_primary.module.vpc.aws_vpc.this",
            "module.vpc_primary.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c1b33a96274135f",
            "route_table_id": "rtb-00592b353b1ebbc59",
            "subnet_id": "subnet-063df7862e35b97c0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.data.aws_availability_zones.available",
            "module.vpc_primary.module.vpc.aws_route_table.database",
            "module.vpc_primary.module.vpc.aws_route_table.private",
            "module.vpc_primary.module.vpc.aws_subnet.database",
            "module.vpc_primary.module.vpc.aws_vpc.this",
            "module.vpc_primary.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0414e418fee036d0d",
            "route_table_id": "rtb-00592b353b1ebbc59",
            "subnet_id": "subnet-073b613c1e994a689"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.data.aws_availability_zones.available",
            "module.vpc_primary.module.vpc.aws_route_table.private",
            "module.vpc_primary.module.vpc.aws_subnet.private",
            "module.vpc_primary.module.vpc.aws_vpc.this",
            "module.vpc_primary.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eca06b394de8b771",
            "route_table_id": "rtb-00592b353b1ebbc59",
            "subnet_id": "subnet-00f2acb723ea3ed5f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.data.aws_availability_zones.available",
            "module.vpc_primary.module.vpc.aws_route_table.private",
            "module.vpc_primary.module.vpc.aws_subnet.private",
            "module.vpc_primary.module.vpc.aws_vpc.this",
            "module.vpc_primary.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-025ae4665baad9aca",
            "route_table_id": "rtb-06e483ff9e005cabd",
            "subnet_id": "subnet-05f51fc5705940abe"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.data.aws_availability_zones.available",
            "module.vpc_primary.module.vpc.aws_route_table.public",
            "module.vpc_primary.module.vpc.aws_subnet.public",
            "module.vpc_primary.module.vpc.aws_vpc.this",
            "module.vpc_primary.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07d696d01c335dd62",
            "route_table_id": "rtb-06e483ff9e005cabd",
            "subnet_id": "subnet-0a10d6ac3077ddb1d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.data.aws_availability_zones.available",
            "module.vpc_primary.module.vpc.aws_route_table.public",
            "module.vpc_primary.module.vpc.aws_subnet.public",
            "module.vpc_primary.module.vpc.aws_vpc.this",
            "module.vpc_primary.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:643942183295:subnet/subnet-00184a905d02447f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.201.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00184a905d02447f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "643942183295",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aerolink-dev-primary-vpc-db-us-east-1a"
            },
            "tags_all": {
              "Name": "aerolink-dev-primary-vpc-db-us-east-1a"
            },
            "vpc_id": "vpc-025c48b3d39de9e1d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.data.aws_availability_zones.available",
            "module.vpc_primary.module.vpc.aws_vpc.this",
            "module.vpc_primary.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:643942183295:subnet/subnet-063df7862e35b97c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.202.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-063df7862e35b97c0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "643942183295",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aerolink-dev-primary-vpc-db-us-east-1b"
            },
            "tags_all": {
              "Name": "aerolink-dev-primary-vpc-db-us-east-1b"
            },
            "vpc_id": "vpc-025c48b3d39de9e1d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.data.aws_availability_zones.available",
            "module.vpc_primary.module.vpc.aws_vpc.this",
            "module.vpc_primary.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_primary.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:643942183295:subnet/subnet-073b613c1e994a689",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-073b613c1e994a689",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "643942183295",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aerolink-dev-primary-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Name": "aerolink-dev-primary-vpc-private-us-east-1a"
            },
            "vpc_id": "vpc-025c48b3d39de9e1d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.data.aws_availability_zones.available",
            "module.vpc_primary.module.vpc.aws_vpc.this",
            "module.vpc_primary.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:643942183295:subnet/subnet-00f2acb723ea3ed5f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00f2acb723ea3ed5f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "643942183295",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aerolink-dev-primary-vpc-private-us-east-1b"
            },
            "tags_all": {
              "Name": "aerolink-dev-primary-vpc-private-us-east-1b"
            },
            "vpc_id": "vpc-025c48b3d39de9e1d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.data.aws_availability_zones.available",
            "module.vpc_primary.module.vpc.aws_vpc.this",
            "module.vpc_primary.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_primary.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:643942183295:subnet/subnet-05f51fc5705940abe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05f51fc5705940abe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "643942183295",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aerolink-dev-primary-vpc-public-us-east-1a"
            },
            "tags_all": {
              "Name": "aerolink-dev-primary-vpc-public-us-east-1a"
            },
            "vpc_id": "vpc-025c48b3d39de9e1d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.data.aws_availability_zones.available",
            "module.vpc_primary.module.vpc.aws_vpc.this",
            "module.vpc_primary.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:643942183295:subnet/subnet-0a10d6ac3077ddb1d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a10d6ac3077ddb1d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "643942183295",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aerolink-dev-primary-vpc-public-us-east-1b"
            },
            "tags_all": {
              "Name": "aerolink-dev-primary-vpc-public-us-east-1b"
            },
            "vpc_id": "vpc-025c48b3d39de9e1d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.data.aws_availability_zones.available",
            "module.vpc_primary.module.vpc.aws_vpc.this",
            "module.vpc_primary.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:643942183295:vpc/vpc-025c48b3d39de9e1d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-041e60c7db9cf2c07",
            "default_route_table_id": "rtb-02f44428899258466",
            "default_security_group_id": "sg-067c770109acdbb6b",
            "dhcp_options_id": "dopt-058be5c401ceca4d0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-025c48b3d39de9e1d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02f44428899258466",
            "owner_id": "643942183295",
            "tags": {
              "Name": "aerolink-dev-primary-vpc"
            },
            "tags_all": {
              "Name": "aerolink-dev-primary-vpc"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_secondary.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:643942183295:network-acl/acl-0a190e8f0cc58a296",
            "default_network_acl_id": "acl-0a190e8f0cc58a296",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0a190e8f0cc58a296",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "643942183295",
            "subnet_ids": [
              "subnet-004250c43129f51e2",
              "subnet-02419ae92f72c3ef3",
              "subnet-03eea9d082c0874a9",
              "subnet-080231f96d9407879",
              "subnet-0e2db2bbb48909a95",
              "subnet-0fb4d1b3413c4dac5"
            ],
            "tags": {
              "Name": "aerolink-dev-secondary-vpc-default"
            },
            "tags_all": {
              "Name": "aerolink-dev-secondary-vpc-default"
            },
            "vpc_id": "vpc-0a99a34f319aaa368"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_secondary.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_secondary.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:643942183295:route-table/rtb-0f29eb07b4f4db52c",
            "default_route_table_id": "rtb-0f29eb07b4f4db52c",
            "id": "rtb-0f29eb07b4f4db52c",
            "owner_id": "643942183295",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "aerolink-dev-secondary-vpc-default"
            },
            "tags_all": {
              "Name": "aerolink-dev-secondary-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0a99a34f319aaa368"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_secondary.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_secondary.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:643942183295:security-group/sg-0dd1d60d1f1e869d4",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0dd1d60d1f1e869d4",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "643942183295",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aerolink-dev-secondary-vpc-default"
            },
            "tags_all": {
              "Name": "aerolink-dev-secondary-vpc-default"
            },
            "vpc_id": "vpc-0a99a34f319aaa368"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_secondary.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_secondary.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-038a6ea4cf7370b42",
            "arn": "arn:aws:ec2:eu-west-1:643942183295:elastic-ip/eipalloc-038a6ea4cf7370b42",
            "association_id": "eipassoc-0c1911fce4b784364",
            "domain": "vpc",
            "id": "eipalloc-038a6ea4cf7370b42",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0ad1437bb11464c94",
            "private_dns": "ip-10-0-101-203.eu-west-1.compute.internal",
            "private_ip": "10.0.101.203",
            "public_dns": "ec2-54-72-196-120.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.72.196.120",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "aerolink-dev-secondary-vpc-eu-west-1a"
            },
            "tags_all": {
              "Name": "aerolink-dev-secondary-vpc-eu-west-1a"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_secondary.data.aws_availability_zones.available",
            "module.vpc_secondary.module.vpc.aws_internet_gateway.this",
            "module.vpc_secondary.module.vpc.aws_vpc.this",
            "module.vpc_secondary.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_secondary.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:643942183295:internet-gateway/igw-02fc87690e345586c",
            "id": "igw-02fc87690e345586c",
            "owner_id": "643942183295",
            "tags": {
              "Name": "aerolink-dev-secondary-vpc"
            },
            "tags_all": {
              "Name": "aerolink-dev-secondary-vpc"
            },
            "vpc_id": "vpc-0a99a34f319aaa368"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_secondary.module.vpc.aws_vpc.this",
            "module.vpc_secondary.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_secondary.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-038a6ea4cf7370b42",
            "association_id": "eipassoc-0c1911fce4b784364",
            "connectivity_type": "public",
            "id": "nat-09a7f4ab7a0e4f7ca",
            "network_interface_id": "eni-0ad1437bb11464c94",
            "private_ip": "10.0.101.203",
            "public_ip": "54.72.196.120",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03eea9d082c0874a9",
            "tags": {
              "Name": "aerolink-dev-secondary-vpc-eu-west-1a"
            },
            "tags_all": {
              "Name": "aerolink-dev-secondary-vpc-eu-west-1a"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_secondary.data.aws_availability_zones.available",
            "module.vpc_secondary.module.vpc.aws_eip.nat",
            "module.vpc_secondary.module.vpc.aws_internet_gateway.this",
            "module.vpc_secondary.module.vpc.aws_subnet.public",
            "module.vpc_secondary.module.vpc.aws_vpc.this",
            "module.vpc_secondary.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_secondary.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-013fe39975b98470c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-09a7f4ab7a0e4f7ca",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-013fe39975b98470c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_secondary.data.aws_availability_zones.available",
            "module.vpc_secondary.module.vpc.aws_eip.nat",
            "module.vpc_secondary.module.vpc.aws_internet_gateway.this",
            "module.vpc_secondary.module.vpc.aws_nat_gateway.this",
            "module.vpc_secondary.module.vpc.aws_route_table.private",
            "module.vpc_secondary.module.vpc.aws_subnet.public",
            "module.vpc_secondary.module.vpc.aws_vpc.this",
            "module.vpc_secondary.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_secondary.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02fc87690e345586c",
            "id": "r-rtb-0dbe3f74960560caf1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0dbe3f74960560caf",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_secondary.data.aws_availability_zones.available",
            "module.vpc_secondary.module.vpc.aws_internet_gateway.this",
            "module.vpc_secondary.module.vpc.aws_route_table.public",
            "module.vpc_secondary.module.vpc.aws_vpc.this",
            "module.vpc_secondary.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_secondary.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:643942183295:route-table/rtb-013fe39975b98470c",
            "id": "rtb-013fe39975b98470c",
            "owner_id": "643942183295",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09a7f4ab7a0e4f7ca",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aerolink-dev-secondary-vpc-private"
            },
            "tags_all": {
              "Name": "aerolink-dev-secondary-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a99a34f319aaa368"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_secondary.data.aws_availability_zones.available",
            "module.vpc_secondary.module.vpc.aws_vpc.this",
            "module.vpc_secondary.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_secondary.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:643942183295:route-table/rtb-0dbe3f74960560caf",
            "id": "rtb-0dbe3f74960560caf",
            "owner_id": "643942183295",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02fc87690e345586c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aerolink-dev-secondary-vpc-public"
            },
            "tags_all": {
              "Name": "aerolink-dev-secondary-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a99a34f319aaa368"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_secondary.data.aws_availability_zones.available",
            "module.vpc_secondary.module.vpc.aws_vpc.this",
            "module.vpc_secondary.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_secondary.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1ff2d594b863199",
            "route_table_id": "rtb-013fe39975b98470c",
            "subnet_id": "subnet-0e2db2bbb48909a95"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_secondary.data.aws_availability_zones.available",
            "module.vpc_secondary.module.vpc.aws_route_table.database",
            "module.vpc_secondary.module.vpc.aws_route_table.private",
            "module.vpc_secondary.module.vpc.aws_subnet.database",
            "module.vpc_secondary.module.vpc.aws_vpc.this",
            "module.vpc_secondary.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e0ed803d8f97536f",
            "route_table_id": "rtb-013fe39975b98470c",
            "subnet_id": "subnet-004250c43129f51e2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_secondary.data.aws_availability_zones.available",
            "module.vpc_secondary.module.vpc.aws_route_table.database",
            "module.vpc_secondary.module.vpc.aws_route_table.private",
            "module.vpc_secondary.module.vpc.aws_subnet.database",
            "module.vpc_secondary.module.vpc.aws_vpc.this",
            "module.vpc_secondary.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_secondary.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f81c74fbab5a53a",
            "route_table_id": "rtb-013fe39975b98470c",
            "subnet_id": "subnet-080231f96d9407879"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_secondary.data.aws_availability_zones.available",
            "module.vpc_secondary.module.vpc.aws_route_table.private",
            "module.vpc_secondary.module.vpc.aws_subnet.private",
            "module.vpc_secondary.module.vpc.aws_vpc.this",
            "module.vpc_secondary.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2ce9f2b01cd286c",
            "route_table_id": "rtb-013fe39975b98470c",
            "subnet_id": "subnet-0fb4d1b3413c4dac5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_secondary.data.aws_availability_zones.available",
            "module.vpc_secondary.module.vpc.aws_route_table.private",
            "module.vpc_secondary.module.vpc.aws_subnet.private",
            "module.vpc_secondary.module.vpc.aws_vpc.this",
            "module.vpc_secondary.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_secondary.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b512887f067103b",
            "route_table_id": "rtb-0dbe3f74960560caf",
            "subnet_id": "subnet-03eea9d082c0874a9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_secondary.data.aws_availability_zones.available",
            "module.vpc_secondary.module.vpc.aws_route_table.public",
            "module.vpc_secondary.module.vpc.aws_subnet.public",
            "module.vpc_secondary.module.vpc.aws_vpc.this",
            "module.vpc_secondary.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f482eda314dc2bd",
            "route_table_id": "rtb-0dbe3f74960560caf",
            "subnet_id": "subnet-02419ae92f72c3ef3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_secondary.data.aws_availability_zones.available",
            "module.vpc_secondary.module.vpc.aws_route_table.public",
            "module.vpc_secondary.module.vpc.aws_subnet.public",
            "module.vpc_secondary.module.vpc.aws_vpc.this",
            "module.vpc_secondary.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_secondary.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:643942183295:subnet/subnet-0e2db2bbb48909a95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.201.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e2db2bbb48909a95",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "643942183295",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aerolink-dev-secondary-vpc-db-eu-west-1a"
            },
            "tags_all": {
              "Name": "aerolink-dev-secondary-vpc-db-eu-west-1a"
            },
            "vpc_id": "vpc-0a99a34f319aaa368"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_secondary.data.aws_availability_zones.available",
            "module.vpc_secondary.module.vpc.aws_vpc.this",
            "module.vpc_secondary.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:643942183295:subnet/subnet-004250c43129f51e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.202.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-004250c43129f51e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "643942183295",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aerolink-dev-secondary-vpc-db-eu-west-1b"
            },
            "tags_all": {
              "Name": "aerolink-dev-secondary-vpc-db-eu-west-1b"
            },
            "vpc_id": "vpc-0a99a34f319aaa368"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_secondary.data.aws_availability_zones.available",
            "module.vpc_secondary.module.vpc.aws_vpc.this",
            "module.vpc_secondary.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_secondary.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:643942183295:subnet/subnet-080231f96d9407879",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-080231f96d9407879",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "643942183295",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aerolink-dev-secondary-vpc-private-eu-west-1a"
            },
            "tags_all": {
              "Name": "aerolink-dev-secondary-vpc-private-eu-west-1a"
            },
            "vpc_id": "vpc-0a99a34f319aaa368"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_secondary.data.aws_availability_zones.available",
            "module.vpc_secondary.module.vpc.aws_vpc.this",
            "module.vpc_secondary.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:643942183295:subnet/subnet-0fb4d1b3413c4dac5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fb4d1b3413c4dac5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "643942183295",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aerolink-dev-secondary-vpc-private-eu-west-1b"
            },
            "tags_all": {
              "Name": "aerolink-dev-secondary-vpc-private-eu-west-1b"
            },
            "vpc_id": "vpc-0a99a34f319aaa368"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_secondary.data.aws_availability_zones.available",
            "module.vpc_secondary.module.vpc.aws_vpc.this",
            "module.vpc_secondary.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_secondary.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:643942183295:subnet/subnet-03eea9d082c0874a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03eea9d082c0874a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "643942183295",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aerolink-dev-secondary-vpc-public-eu-west-1a"
            },
            "tags_all": {
              "Name": "aerolink-dev-secondary-vpc-public-eu-west-1a"
            },
            "vpc_id": "vpc-0a99a34f319aaa368"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_secondary.data.aws_availability_zones.available",
            "module.vpc_secondary.module.vpc.aws_vpc.this",
            "module.vpc_secondary.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:643942183295:subnet/subnet-02419ae92f72c3ef3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02419ae92f72c3ef3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "643942183295",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aerolink-dev-secondary-vpc-public-eu-west-1b"
            },
            "tags_all": {
              "Name": "aerolink-dev-secondary-vpc-public-eu-west-1b"
            },
            "vpc_id": "vpc-0a99a34f319aaa368"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_secondary.data.aws_availability_zones.available",
            "module.vpc_secondary.module.vpc.aws_vpc.this",
            "module.vpc_secondary.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_secondary.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:643942183295:vpc/vpc-0a99a34f319aaa368",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a190e8f0cc58a296",
            "default_route_table_id": "rtb-0f29eb07b4f4db52c",
            "default_security_group_id": "sg-0dd1d60d1f1e869d4",
            "dhcp_options_id": "dopt-07ad541cb50f05ad6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a99a34f319aaa368",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f29eb07b4f4db52c",
            "owner_id": "643942183295",
            "tags": {
              "Name": "aerolink-dev-secondary-vpc"
            },
            "tags_all": {
              "Name": "aerolink-dev-secondary-vpc"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}